# TutorBin

./: .gitignore  FEM_Coursework_Answers.md  PRIMARY_TASK_EXECUTION_PLAN.md  Screen Recording 2026-03-29 at 12.04.00 PM.mov  latest_cmake_release.json
ExtendedCppCoursework/: README.md  VIDEO_SHOT_LIST.md
ExtendedCppCoursework 2/: CMakeLists.txt  CUSTOM_FEATURE_EXPLANATION.txt  ExtendedCppCoursework.jucer  RUBRIC_EVIDENCE_CHECKLIST.md  VIDEO_NARRATION_SCRIPT.md  VIDEO_RECORDING_CHECKLIST_1TO1.md
ExtendedCppCoursework 2/Source/: DeckGUI.cpp  Interval.h  Main.cpp  MainComponent.cpp  ScratchEngine.cpp  ScratchEngine.h  WaveformDisplay.cpp
ExtendedCppCoursework/.tools/cmake-4.3.0-macos-universal/CMake.app/Contents/: CodeResources  Info.plist
ExtendedCppCoursework/.tools/cmake-4.3.0-macos-universal/CMake.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqico.dylib  libqjpeg.dylib
ExtendedCppCoursework/.tools/cmake-4.3.0-macos-universal/CMake.app/Contents/PlugIns/styles/: libqmacstyle.dylib
ExtendedCppCoursework/.tools/cmake-4.3.0-macos-universal/CMake.app/Contents/_CodeSignature/: CodeResources
ExtendedCppCoursework/.tools/cmake-4.3.0-macos-universal/CMake.app/Contents/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
ExtendedCppCoursework/.tools/cmake-4.3.0-macos-universal/CMake.app/Contents/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  (+16 more)
ExtendedCppCoursework/Source/: DJAudioPlayer.cpp  DJAudioPlayer.h  DeckGUI.h  MainComponent.h  WaveformDisplay.h
(+2242 files in other folders)
